fix: input-drawer overflow

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -90,3 +90,7 @@ html {
 .z-index-5 {
   z-index: 5;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
